--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -18,27 +18,26 @@
                 <i class="fas fa-arrow-left"></i>
             </div>
             <div class="header-center">
-                <div class="header-avatar-group"><img src="avatar1.jpg" alt="Group Avatar"></div>
+                <div class="header-avatar-group"><img src="/public/profile.png" alt="Group Avatar"></div>
                 <div class="group-name">Fun Friday Group</div>
             </div>
             <div class="header-right">
-                <i class="fas fa-user-friends"></i>
+                <img src="public/annobefore.png" class="anonymous" alt="Anonymous Photo"/>
             </div>
         </header>
 
         <main class="chat-container" id="chat-container">
-            </main>
+            <div class="anonymous-note"></div>
+        </main>
 
         <footer>
             <form id="message-form">
+                
                 <input type="text" id="message-input" placeholder="Type a message..." required>
                 <button type="submit" id="send-button">
                     <i class="fas fa-paper-plane"></i> 
                 </button> 
             </form>
-            <div class="anonymous-note">
-                <i class="fas fa-lock"></i> Now you're appearing as Anonymous!
-            </div>
         </footer>
     </div>
     
